--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,10 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile group: 'org.apache.shiro', name: 'shiro-core', version: '1.2.2'
+	compile group: 'org.apache.shiro', name: 'shiro-spring', version: '1.2.2'
+	compile group: 'org.apache.shiro', name: 'shiro-ehcache', version: '1.2.2'
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile group: 'com.alibaba', name: 'fastjson', version: '1.2.17'
+	runtime('mysql:mysql-connector-java')
 }
